Rutas del servidor

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,7 @@
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet labore commodi libero omnis eius minus, quo quisquam reprehenderit consectetur aliquam maxime doloremque accusantium vitae tenetur magnam blanditiis eos! Aspernatur, dolore?</p>
+<div class="jumbotron mt-4">
+    <h1 class="display-4">Notes App Nodejs and Mongo db</h1>
+    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis repellendus harum aspernatur iure perspiciatis ab recusandae! Quos, obcaecati dolorem, cupiditate nulla cum consequuntur aliquid doloribus, similique rem nihil doloremque dolores?</p>
+    <hr class="my-4">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut quisquam esse optio fugiat molestias, tempora inventore maxime ut voluptatem. Ipsam, cupiditate dicta eveniet at dolores fugit expedita nam autem eum.</p>
+    <a href="http://giulianaolmos.guixon.com/" class="btn btn-primary">Pagina de Giuli</a>
+</div>
