--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -15,6 +15,7 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                {{#if user}}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,15 +25,18 @@
                         <a class="dropdown-item" href="/notes/">All Notes</a>
                         <a class="dropdown-item" href="/notes/add">Add Notes</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Log Out</a>
+                        <a class="dropdown-item" href="/users/logout">Log Out</a>
                     </div>
                 </li>
+
+                {{else}}
                 <li class="nav-item">
                     <a class="nav-link" href="/users/signin">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users/signup">Register</a>
                 </li>
+                {{/if}}
             </ul>
         </div>
     </div>
